# hyprcaffeine

./: .SRCINFO  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  build-local.sh  hyprcaffeine.install  install.sh
config/: default.yaml  polkit.rules  ui-dictionary.json
docs/: CONFIG.md  INSTALL.md  WAYBAR.md
scripts/: caffeine-menu.sh  config.sh  hyprland.sh  icons.sh  keybinds.sh  notify.sh  polkit-setup.sh  post-install.sh  state.sh  test-inhibit.sh  timer.sh  ui-engine.sh  watcher.sh  waybar-remove.sh  waybar-setup.sh  waybar.sh
src-tui/: Cargo.toml
src-tui/src/: app.rs  event.rs  main.rs  theme.rs  ui.rs
systemd/: hyprcaffeine.service
tests/: run.sh
themes/walker/caffeine/: layout.xml  style.css
waybar/: module.json  waybar-css.css
